--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,6 +2,7 @@ $color-white:               #FFF;
 $color-black:               #262626;
 $color-grey:                #A79E9E;
 $color-grey-2:              #f0f0f0;
+$color-grey-3:              #515151;
 
 $color-blue:                #0077ab;
 
