--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -17,52 +17,59 @@
 
 
 .expand-modal {
-    &-open {
+    &-open-1,
+    &-open-2 {
         @extend .ttl-xs;
 
         border: none;
         box-sizing: border-box;
         position: absolute;
         bottom: 0;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        left: 0;
         text-transform: uppercase;
-        width: 55%;
         padding: to-rem(0) to-rem($F8);
-        background-color: var(--black);
-        color: var(--white);
         cursor: pointer;
+        width: 100%;
         height: to-rem($F9);
         line-height: to-rem($F9);
         margin-bottom: to-rem($F7);
         transition: opacity .3s ease-in;
-
-        @include layout-1024() {
-            text-transform: initial;
-            max-width: to-rem($F14);
-            border: 1px solid var(--grey-2);
-            border-radius: to-rem($F8);
-        }
+        text-transform: uppercase;
+        font-weight: 900;
 
         @include layout-1440() {
-            bottom: initial;
-            border-radius: to-rem($F9);
-            max-width: to-rem($F13);
-            top: 50%;
-        }
-
-        @include layout-1440() {
-            bottom: initial;
-            border-radius: to-rem($F9);
-            max-width: to-rem($F13);
-            top: 50%;
             height: to-rem($F10);
             line-height: to-rem($F10);
         }
+    }
 
-        &:hover,
-        &:focus {
-            opacity: .5
+    &-open-1 {
+        opacity: 1;
+        background-color: $color-grey-3;
+        color: var(--white);
+
+        .internal-expand:hover &,
+        .internal-expand:focus & {
+            opacity: 0;
+        }
+    }
+
+    &-open-2 {
+        transition: opacity .5s ease, width 1s linear, border-radius 1s ease;
+        opacity: 0;
+        background-color: var(--black);
+        color: var(--white);
+        mix-blend-mode: multiply;
+        width: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 0;
+
+        .internal-expand:hover &,
+        .internal-expand:focus & {
+            opacity: 1;
+            width: to-rem(290);
+            border-radius: to-rem($F9);
         }
     }
 
@@ -77,7 +84,6 @@
         width: 100%;
         z-index: 100;
         justify-content: flex-end;
-
 
         &-button {
             @extend .ttl-xs;
@@ -152,8 +158,6 @@
                 border-radius: to-rem($F7);
             }
         }
-
-
     }
 
     &-image,
