--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -51,17 +51,19 @@
         display: block;
         content: '⟵';
         position: absolute;
-        top: to-rem(-1);
+        top: to-rem(5);
         left: to-rem(-3);
         font-size: to-rem(25);
-        line-height: to-rem(25);
-        font-weight: 900;
+        line-height: to-rem(15);
+        height: to-rem(15);
+        font-weight: 400;
         width: 34%;
         overflow: hidden;
         
         @include layout-2560() {
           font-size: to-rem(38);
-          line-height: to-rem(38);
+          line-height: to-rem(28);
+          height: to-rem(28);
         }
       }
 
