--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -150,8 +150,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: auto;
-            height: auto;
+            width: 100%;
+            height: 100%;
             max-width: 100%;
 
             @include layout-1024() {
