--- a/src/sass/_structure.scss
+++ b/src/sass/_structure.scss
@@ -3,6 +3,8 @@
     --black:    #{$color-black};
     --grey:     #{$color-grey};
     --grey-2:   #{$color-grey-2};
+    --grey-3:   #{$color-grey-3};
+    --blue:     #{$color-blue};
 }
 
 html,
