--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -74,7 +74,7 @@
 
     &-item {
         grid-column: 1 /  span 2;
-        border-bottom: 2px solid $color-grey-2;
+        border-bottom: 2px solid var(--grey-2);
 
         &:nth-of-type(even) {
             .portfolio-item-link {
@@ -129,7 +129,7 @@
                 width: 100%;
                 height: 70%;
                 position: relative;
-                border: 1px solid $color-grey-2;
+                border: 1px solid var(--grey-2);
                 box-sizing: border-box;
             }
 
@@ -145,7 +145,7 @@
                     display: block;
                     width: 100%;
                     height: 100%;
-                    border: 1px solid $color-grey-2;
+                    border: 1px solid var(--grey-2);
                     box-sizing: border-box;
                     overflow: hidden;
 
@@ -197,33 +197,33 @@
                 align-items: center;
                 justify-content: center;
                 position: relative;
-                border: 1px solid $color-grey-2;
+                border: 1px solid var(--grey-2);
                 box-sizing: border-box;
                 border-top: none;
                 width: 100%;
                 height: 15%;
                 margin: 0 auto;
-                background: $color-grey-2;
+                background: var(--grey-2);
             }
 
             &-stand {
                 position: relative;
-                border: 1px solid $color-grey-2;
+                border: 1px solid var(--grey-2);
                 border-top: none;
                 width: 15%;
                 height: 13%;
                 margin: 0 auto;
-                background: $color-grey-2;
+                background: var(--grey-2);
             }
 
             &-base {
                 position: relative;
-                border: 1px solid $color-grey-2;
+                border: 1px solid var(--grey-2);
                 border-top: none;
                 width: 30%;
                 height: 2%;
                 margin: 0 auto;
-                background: $color-grey-2;
+                background: var(--grey-2);
                 border-radius: 15px;
             }
         }
@@ -243,7 +243,7 @@
                 @extend .txt-md;
 
                 display: inline;
-                background: $color-white;
+                background: var(--white);
             }
 
             &-button {
