COLORS: update blue

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,7 +4,7 @@ $color-grey:                #A79E9E;
 $color-grey-2:              #f0f0f0;
 $color-grey-3:              #515151;
 
-$color-blue:                #0077ab;
+$color-blue:                #006ca6;
 
 
 // Viewports
