--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -75,6 +75,14 @@
         }
       }
     }
+
+    &.scroll-up {
+      cursor: n-resize;
+    }
+
+    &.scroll-down {
+      cursor: s-resize;
+    }
   }
 
   &-separator {
